# text-to-image-demo

./: .gitignore  1_experimentation.ipynb  2_fine_tuning.ipynb  2_fine_tuning_custom.ipynb  3_Finetune_Text_to_Image.pipeline  3_export.ipynb  3_remote_inference.ipynb  3_testing.ipynb  4_modelmesh_inference.ipynb  4_remote_inference.ipynb  ARCHITECTURE.md  CLAUDE.md  DEMO_SCRIPT.md  Fine Tuning.pipeline  Finetune Text to Image.pipeline  Makefile  README.md  SERVING.md  Single Notebook.pipeline  experimentation.ipynb  export.ipynb  fine-tuning.ipynb  fine_tuning_optimized.ipynb  fine_tuning_simple.ipynb  gen_single_bucket.ipynb  gen_single_prompt.ipynb  lora_load.ipynb  prompts.csv  raw_pipeline_local.ipynb  raw_pipeline_rhteddy.ipynb  requirements-base.txt  requirements-gpu.txt  requirements.txt  setup.sh  single-bucket.pipeline  stable_diffusion_huggingface.ipynb  stable_diffusion_huggingface_finetuned.ipynb  test_tuned_model.ipynb  train_dreambooth.py
chatbot/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.example.json  multi_client.py  package.json  pyproject.toml  requirements.txt
chatbot/backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MCP_README.md  conftest.py  main.py  mcp-config.kube.json  pyproject.toml
chatbot/backend/app/: config.py
chatbot/backend/app/api/: router.py
chatbot/backend/app/services/: litellm_service.py  mcp_exceptions.py  mcp_service.py
chatbot/backend/docs/: MCP_API.md  MCP_INTEGRATION.md
chatbot/backend/tests/: test_chat.py  test_mcp_initialization.py  test_mcp_service.py
chatbot/backend/tests/mocks/: __init__.py  mock_mcp_server.py
chatbot/frontend/: .gitignore  CLAUDE.md  Dockerfile  eslint.config.js  index.html  jest.config.js  nginx.conf  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
chatbot/frontend/src/: index.tsx  setupTests.ts
chatbot/frontend/src/app/: app.test.tsx  index.tsx  routes.tsx
chatbot/frontend/src/app/AppLayout/: AppLayout.tsx
chatbot/frontend/src/app/Chat/: Chat.old.tsx  Chat.test.tsx  Chat.tsx  ImagePreview.tsx
chatbot/frontend/src/app/api/: chat.ts
chatbot/k8s/base/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  kustomization.yaml  route.yaml
chatbot/k8s/overlays/deploy/: .env.example  kustomization.yaml  mcp-config.example.json
chatbot/scripts/: build-images.sh  deploy.sh  kustomize.sh  push-images.sh  undeploy.sh
mcp-server/: .coveragerc  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  INTEGRATION.md  Makefile  README.md  image_server.py  main.py  pyproject.toml  run-all.sh  test_build.sh  test_generate.py  validate-kustomize.sh
mcp-server/deployment/docker/: .dockerignore  Dockerfile
mcp-server/deployment/k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
mcp-server/docs/: CODING_STANDARDS.md  DEPLOYMENT.md  INTERFACES.md  TROUBLESHOOTING.md  WORKER_COORDINATION.md
mcp-server/kustomize/: README.md
mcp-server/kustomize/base/: deployment.yaml  kustomization.yaml  route.yaml  service.yaml
mcp-server/kustomize/overlays/dev/: kustomization.yaml  networkpolicy.yaml  pvc.yaml
mcp-server/kustomize/overlays/production/: headless-service.yaml  hpa.yaml  kustomization.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  pvc.yaml  secret.yaml
mcp-server/kustomize/overlays/staging/: images-route.yaml  kustomization.yaml
mcp-server/scripts/: test_api.py  test_generate.py  test_with_port_forward.sh
mcp-server/src/: __init__.py  main.py
mcp-server/src/api/: __init__.py  app.py  background.py  mcp_server.py  routes.py
mcp-server/src/config/: __init__.py  settings.py
mcp-server/src/kserve/: __init__.py  client.py  exceptions.py  models.py
mcp-server/src/storage/: __init__.py  base.py  file.py  s3.py
mcp-server/src/utils/: __init__.py  ids.py  images.py  logging.py
mcp-server/templates/: mcp-server.yaml
mcp-server/tests/: __init__.py  conftest.py  utils.py
mcp-server/tests/fixtures/: README.md
mcp-server/tests/fixtures/configs/: file_config.json  s3_config.json  test_settings.env
mcp-server/tests/fixtures/images/: .gitkeep
mcp-server/tests/fixtures/metadata/: basic_metadata.json  batch_metadata.json  invalid_metadata.json
mcp-server/tests/fixtures/responses/: health_check.json  kserve_error.json  kserve_success.json
mcp-server/tests/integration/: __init__.py  test_kserve_integration.py
mcp-server/tests/mocks/: __init__.py  kserve.py  storage.py
mcp-server/tests/unit/: __init__.py
mcp-server/tests/unit/api/: test_background.py  test_mcp_server.py  test_routes.py
mcp-server/tests/unit/config/: test_settings.py
mcp-server/tests/unit/kserve/: __init__.py  test_client.py
mcp-server/tests/unit/storage/: __init__.py  test_file.py  test_s3.py
mcp-server/tests/unit/utils/: test_ids.py  test_images.py  test_logging.py
(+124 files in other folders)
